--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                  ng-click="onCellClick(cell)" ng-right-click="onCellRightClick(cell)">
               <svg xmlns="http://www.w3.org/2000/svg" version="1.1" shape-rendering="crispEdges"
                    width="100%" height="100%" viewBox="0 0 24 24">
-                <text x="12" y="20" class="svgicon" ng-bind="cell.icon"></text>
+                <text x="12" y="20" class="svgicon" ng-bind="cell.icon" ng-class="{loose: cell.isBlown}"></text>
               </svg>
             </div>
           </td>
